phase two begin, display employees working each hour on chart based off of payroll hours.

--- a/Sales Analysis V2.ipynb
+++ b/Sales Analysis V2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,7 @@
     "from decimal import Decimal\n",
     "import datetime\n",
     "from decimal import Decimal, ROUND_HALF_UP\n",
+    "from dateutil.parser import parse\n",
     "\n",
     "#special dictionary to correspond numbers to days of week\n",
     "days_key = {0:'Monday', 1:'Tuesday', 2:'Wednesday', 3:'Thursday', 4:'Friday', 5:'Saturday', 6:'Sunday'}\n",
@@ -77,7 +78,7 @@
     "    td['Gross Sales'] = td['Gross Sales'].apply(lambda x : format_money(x)) #format sales at decimal\n",
     "    td.drop(td[td['Gross Sales'] == 0.00].index, inplace = True) #delete gross sales of 0.00\n",
     "    \n",
-    "    #preparing results, day_average, summary\n",
+    "    #preparing results, day_average\n",
     "    times = td['Time'].unique() #unique hours\n",
     "    times = times[(times>=5) & (times<=18)] #cut hours not between 5AM - 6PM\n",
     "    times.sort() #accending order\n",
@@ -86,6 +87,7 @@
     "    res = pd.DataFrame(index = times, columns = days) #resulting dataframe with unique times & days\n",
     "    res.index.name = 'Hour' #label index\n",
     "    day_averages = pd.DataFrame(index = ['Average Gross Sales'], columns = days)\n",
+    "    #workers = pd.DataFrame(index = times, columns = days)\n",
     "    \n",
     "    #populate results, day_averages\n",
     "    for v in days:\n",
@@ -102,6 +104,11 @@
     "    res.fillna(0, inplace = True) #replace NaN with 0, these are likely times we aren't open\n",
     "    res.columns = list(map(lambda x:days_key[x],res.columns))\n",
     "    day_averages.columns = list(map(lambda x:days_key[x],day_averages.columns))\n",
+    "    '''\n",
+    "    for v in list(td['Date'].unique()):\n",
+    "        #populate works dataframe with who was working each hour of each day of the week\n",
+    "    '''\n",
+    "\n",
     "    return res, day_averages\n",
     "\n",
     "#plots the charts, given two processed transactions, a day, and a show frame parameter\n",
@@ -192,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
